# NeuralNetworkStudy

./: .gitignore  CMakeLists.txt  CMakeLists.txt.corrupted  CMakeLists.txt.old  Command  GPU_PERFORMANCE_ANALYSIS.md  README.md  TRAINING_RESULTS.md  WHY_SLOW_SIMPLE.md  build.sh  classcount.py  download_atis.py  export_model_torchscript.py  finbert_intent_classification.py  finbert_intent_fast.py  joint_nlu_demo.py  joint_nlu_finbert.py  joint_nlu_vocab.json  requirements_finbert.txt  run_cpp_inference.py  test_cpp_inference.sh  test_hf_tokenizer.sh  tokenizer_server.py
backupexamplecode/: intent_slot_cuda_train.cpp
data/: test.json  test_old.json  train.json  validation.json
docs/: ACTIVATION_CUDA_GUIDE.md  ACTIVATION_FUNCTIONS_EXPLAINED.md  ACTIVATION_QUICKSTART.md  ACTIVATION_VISUAL_GUIDE.md  ATTENTION_COMPLETE_GUIDE.md  CMAKE_COMPLETE_GUIDE.md  CODE_EXPLANATION_COMPLETE.md  CUDA_CHATBOT_GUIDE.md  CUDA_GPU_GUIDE.md  CUDA_QUICK_REFERENCE.md  CUDA_RESULTS.md  CUDA_TRANSFORMER_COMPLETE.md  CUDA_TRANSFORMER_STATUS.md  LAYER_COMPLETE_GUIDE.md  LAYER_CUDA_COMPLETE_GUIDE.md  LAYER_QUICK_REFERENCE.md  LOSS_FUNCTIONS_COMPLETE_GUIDE.md  LOSS_FUNCTIONS_QUICK_REFERENCE.md  MEMORY_MANAGEMENT_GUIDE.md  MEMORY_SIZEOF_EXPLAINED.md  NETWORK_CLASS_COMPLETE_EXPLANATION.md  NETWORK_FLOW_VISUAL.md  NEURAL_NETWORK_FLOW_COMPLETE.md  OPTIMIZER_COMPLETE_GUIDE.md  OPTIMIZER_CUDA_GUIDE.md  OPTIMIZER_CUDA_SUMMARY.md  OPTIMIZER_QUICK_REFERENCE.md  QUICK_REFERENCE.md  RNN_LSTM_GRU_COMPLETE_GUIDE.md  TRANSFORMER_ANALYSIS.md  TRANSFORMER_CUDA_SUMMARY.md
example/: activation_cuda_example.cpp  activation_detailed_example.cpp  attention_cuda_example.cpp  attention_example.cpp  bert_nlu_train.cpp  comparison_example.cpp  intent_cuda_train_working.cpp  intent_slot_chat.cpp  intent_slot_cuda_chat.cpp  intent_slot_cuda_joint_train.cpp  intent_slot_cuda_train.cpp  intent_slot_cuda_train_fixed.cpp  intent_slot_cuda_train_v2.cpp  intent_slot_detection_cuda_example.cpp  intent_slot_detection_example.cpp  joint_nlu_inference.cpp  layer_cuda_example.cpp  layer_example.cpp  loss_cuda_example.cpp  loss_detailed_example.cpp  lstm_cuda_example.cpp  lstm_example.cpp  matrix_cuda_example.cpp  matrix_example.cpp  network_complete_example.cpp  network_cuda_example.cpp  network_cuda_sample.cpp  optimizer_cuda_example.cpp  optimizer_example.cpp  rnn_cuda_example.cpp  rnn_example.cpp  test_matmul_cuda.cpp  transformer_cuda_example.cpp
include/nn/: activation.h  activation_cuda.h  attention.h  attention_cuda.h  attention_rnn.h  bert_encoder.h  bert_encoder_cuda.h  gru.h  gru_cuda.h  layer.h  layer_cuda.h  loss.h  loss_cuda.h  lstm.h  lstm_cuda.h  matrix.h  matrix_cuda.h  network.h  network_cuda.h  optimizer.h  optimizer_cuda.h  rnn.h  rnn_cuda.h
include/nn/transformer/: attention.h  decoder.h  embedding.h  encoder.h  feedforward.h  layer_norm.h  model_saver.h  tokenizer.h  transformer.h
saved_models/intent_slot_cuda_model/: config.json  labels.json  vocab.json
src/: activation.cpp  activation_cuda.cu  attention.cpp  attention_cuda.cu  bert_encoder.cpp  bert_encoder_cuda.cu  gru.cpp  layer.cpp  layer_cuda.cu  loss.cpp  loss_cuda.cu  lstm.cpp  lstm_cuda.cu  matrix.cpp  matrix_cuda.cu  network.cpp  network_cuda.cu  optimizer.cpp  optimizer_cuda.cu  rnn.cpp  rnn_cuda.cu  transformer_cuda.cu
src/transformer/: attention.cpp  decoder.cpp  embedding.cpp  encoder.cpp  feedforward.cpp  layer_norm.cpp  tokenizer.cpp  transformer.cpp
